package businessservice.domain;

public enum TicketType {
    FESTIVAL,
    REGULAR,
    VIP,
    PROMO
}
